force-app/main/default/objects/Local_ACM_Prio_Score__mdt/Local_ACM_Prio_Score__mdt.object-meta.xml
<CustomObject>
    <label>Local ACM Prio Score</label>
    <pluralLabel>Local ACM Prio Scores</pluralLabel>
</CustomObject>