force-app/main/default/objects/Local_ACM_Prio_Score__mdt/fields/Mininmum__c.field-meta.xml
<CustomField>
    <fullName>Mininmum__c</fullName>
    <label>Mininmum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>