force-app/main/default/objects/Local_ACM_Prio_Score__mdt/fields/Weightage__c.field-meta.xml
<CustomField>
    <fullName>Weightage__c</fullName>
    <label>Weightage</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>